# translator-api

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/routes/: health_route.py  translation_route.py
core/: config.py  dependencies.py  exceptions.py  lifespan.py  security.py
models/: schemas.py
services/: cache_base.py  cache_service.py  scraper_service.py
tests/integration/: test_translation_route.py
tests/unit/: test_cache_service.py  test_scraper_service.py
